--- a/sobremim.html
+++ b/sobremim.html
@@ -14,19 +14,19 @@
             <a class="cabecalho__menu__link" href="sobremim.html">Sobre mim</a>
         </nav>
     </header>
-    <main class="landing-page">
-        <section class="landing-page__texto">
-            <h1 class="landing-page__texto__titulo">
+    <main class="principal">
+        <section class="principal__texto">
+            <h1 class="principal__texto__titulo">
                 Sobre mim
             </h1>
-            <p class="landing-page__texto__sobre-mim">
+            <p class="principal__texto__sobre-mim">
                 Comecei minha carreira como moto-boy no escritório de Contabilidade CONTEX em 2010 na cidade de Marília/SP, que foi onde nasci e resido até hoje.
             </p>
-            <p class="landing-page__texto__sobre-mim">
+            <p class="principal__texto__sobre-mim">
                 Em agosto de 2011 fui chamado para trabalhar no Banco Bradesco na agência 3054 (Senador Salgado Filho) localizada na cidade de Marília/SP, onde passei por vários 
                 cargos.
             </p>
-            <p class="landing-page__texto__sobre-mim">
+            <p class="principal__texto__sobre-mim">
                 Fui contratado como Escriturário e promovido para Caixa, onde cumpri com essa função até junho de 2015, quando fui promovido para Gerente Assitente PJ. 
                 Fui transferido no ano seguinte para a agência 6013 (João Ramalho) na mesma cidade. 
                 Em setembro de 2018 fui promovido para Multiplicador Exclusive na Gerência Regional de Marília, onde liderava a equipe de Gerentes PF das agências da região. 
@@ -35,7 +35,7 @@
                 Em janeiro de 2021 fui promovido para Gerente PA na cidade de Lupércio/SP, gerenciando todas as contas da cidade e também das cidades próximas onde não tem uma 
                 agência do Banco Bradesco.
             </p>
-            <p class="landing-page__texto__sobre-mim">
+            <p class="principal__texto__sobre-mim">
                 Sigo no Banco Bradesco no cargo de Gerente PA atendendo a cidade de Lupércio/SP e sigo estudando e me renovando, me reinvento todos os dias, sempre buscando novos 
                 desafios e, principalmente, novos conhecimentos, sempre com um olhar de criança, valorizando tudo que puder experienciar, sempre consciente de que hoje sou um 
                 pouco melhor que ontem.
