--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Início - Diogo Farias</title>
+    <title>Portfolio - Diogo Farias</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -14,18 +14,18 @@
             <a class="cabecalho__menu__link" href="sobremim.html">Sobre mim</a>
         </nav>
     </header>
-    <main class="landing-page">
-        <section class="landing-page__texto">
-            <h1 class="landing-page__texto__titulo">Bem-vindo à minha <strong class="destaque">Página</strong></h1>
-            <p class="landing-page__texto__pequeno">Olá! Sou Diogo Farias, bancário, desenvolvedor entusiasta e questionador, este espaço vou usar como meu Portfolio, mas não 
+    <main class="principal">
+        <section class="principal__texto">
+            <h1 class="principal__texto__titulo">Bem-vindo à minha <strong class="destaque">Página</strong></h1>
+            <p class="principal__texto__pequeno">Olá! Sou Diogo Farias, bancário, desenvolvedor entusiasta e questionador, este espaço vou usar como meu Portfolio, mas não 
                 limitado a isso, quero também compartilhar aqui ideias e experiências ou qualquer outra coisa que eu sentir que possa agregar.</p>
-            <div class="landing-page__links">
-                <h2 class="landing-page__links__subtitulo">minhas redes:</h2>
-                <a class="landing-page__links__botao" href="https://www.linkedin.com/in/diogohfarias">
+            <div class="principal__links">
+                <h2 class="principal__links__subtitulo">minhas redes:</h2>
+                <a class="principal__links__botao" href="https://www.linkedin.com/in/diogohfarias">
                     <img src="./assets/linkedin.png">LinkedIn</a>
-                <a class="landing-page__links__botao" href="https://instagram.com/diogohfarias">
+                <a class="principal__links__botao" href="https://instagram.com/diogohfarias">
                     <img src="./assets/instagram.png">Instagram</a>
-                <a class="landing-page__links__botao" href="https://github.com/Diogo5Farias">
+                <a class="principal__links__botao" href="https://github.com/Diogo5Farias">
                     <img src="./assets/github.png">GitHub</a>
             </div>
         </section>
